--- a/src/index.css
+++ b/src/index.css
@@ -164,7 +164,20 @@ footer {
 /* Dropdown Menu Styles */
 .dropdown {
     position: relative;
-    display: inline-block;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #808080;
+    @media screen and (max-width: 768px) {
+      background: #044d7e;
+      width:100%;
+      text-align: center;
+      /* background: red; */
+      height: 50px;
+      /* padding-top: 17px;
+      padding-bottom: 17px; */
+      /* margin: 1px; */
+  }
     
 }
 
@@ -175,6 +188,8 @@ footer {
     min-width: 160px;
     box-shadow: 0px 8px 16px rgba(0,0,0,0.2);
     z-index: 1;
+    
+    
 }
 
 .dropdown-content a {
