--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,15 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Arial', sans-serif;
-  background-color: #f4f4f4; /* Light gray background */
+  background-color: #f4f4f4; 
+  
+  /* potential background image */
+  /* background-image:url("/src/assets/visit_virtually_bg.jpeg");
+  height: 75%;
+  background-position: center; 
+  background-repeat: no-repeat; 
+  background-size: cover;  */
+
 
   /* locks the footer to the bottom of the page */
   min-height: 100vh;
@@ -47,8 +55,9 @@ nav a {
   max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
+  padding-top: 70px;
   display: flex;
-  flex-direction: column; 
+  flex-direction: column;
 }
 
 .program-section,
