--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Arial', sans-serif;
-  background-color: #f4f4f4; 
+  background-color: rgb(246, 246, 246); 
   
   /* potential background image */
   /* background-image:url("/src/assets/visit_virtually_bg.jpeg");
@@ -14,8 +14,11 @@ body {
 
   /* locks the footer to the bottom of the page */
   min-height: 100vh;
+  /* height: 100%; */
   display: flex;
   flex-direction: column;
+  /* position: relative; */
+
 }
 
 header {
@@ -87,7 +90,7 @@ nav a {
 .program-introduction h2,
 .eligibility-text h2,
 .degree-information-text h2 {
-  color: #ff8c00;
+  color: rgb(4, 77, 126);
 }
 
 footer {
@@ -179,7 +182,8 @@ footer {
   display: flex;
   justify-content: center;
   align-items: center;
-  color: #808080;
+  color: rgb(246, 246, 246);
+  
 
   @media screen and (max-width: 768px) {
     /* background: red; */
@@ -213,6 +217,7 @@ footer {
   padding: 12px 16px;
   text-decoration: none;
   display: block;
+  
 
   /* overwrite the navbar color change effect */
   /* &.active {
@@ -221,7 +226,8 @@ footer {
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
+  /* background-color: #ddd; */
+  filter: brightness(90%);
 }
 
 .dropdown:hover .dropdown-content {
