--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 /* Matthew Kaukialo 70 percent I did styling of most of the pages to fit the Countries and content within them along with other webpages. Along with parts of Navbar other than drop down. */
 /* Michael Cullen (15%) */
+/* Oskar Staszewski (15%) Some styling for fonts on pages, text placement on pages, headers, images, footers */
 
 /* Sets basic styles for the entire webpage */
 body {
