--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,20 @@
-/* Matthew Kaukialo 70 percent I did styling of most of the pages to fit the Countries and content within them along with other webpages. Along with parts of Navbar other than drop down. */
-/* Michael Cullen (15%) */
+/*-------------------------------------------------------------------------*
+*---									
+*---        Index.jsx						
+*---									
+*---            This file contains the code responsible for the base styling of 
+*---        the webpage.
+*---	   		
+*---	----	----	----	----	----	----	----	----	---*
+*---									
+*---        Version 1.0     2024 March 21st     	  	
+*---		       	
+*---		    Matthew Kaukialo 70 percent I did styling of most of the pages to fit the
+*---        Countries and content within them along with other webpages. Along with parts of Navbar other than drop down.		
+*---		   			
+*---	      Michael Cullen (15%)
+*---									
+*-------------------------------------------------------------------------*/
 
 /* Sets basic styles for the entire webpage */
 body {
